--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_URI} !^/grav/
-RewriteRule ^$ /grav [QSA]
+RewriteCond %{REQUEST_URI} !^/2020/grav/
+RewriteRule ^$ /2020/grav [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /grav/$1 [L,QSA]
+RewriteRule ^(.*)$ /2020/grav/$1 [L,QSA]
