avoid the grav 404 on every page

--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,4 @@ RewriteCond %{REQUEST_URI} !^/2020/grav/
 RewriteRule ^$ /2020/grav [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /2020/grav/$1 [L,QSA]
+RewriteRule ^2020/(.*)$ /2020/grav/$1 [L,QSA]
