--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,11 @@ AddType application/x-httpd-php7 .php
 
 RewriteEngine On
 
-RewriteRule ^$ grav/ [L]
+# RewriteRule ^$ grav/ [L]
+# 
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^(?!grav/)(.+)$ grav/$1 [L,NC]
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(?!grav/)(.+)$ grav/$1 [L,NC]
+RewriteCond %{REQUEST_URI} !^/2020/grav/
+RewriteRule ^(.*)$ /2020/grav/$1
