--- a/.htaccess
+++ b/.htaccess
@@ -8,5 +8,7 @@ RewriteEngine On
 # RewriteCond %{REQUEST_FILENAME} !-d
 # RewriteRule ^(?!grav/)(.+)$ grav/$1 [L,NC]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !^/2020/grav/
 RewriteRule ^(.*)$ /2020/grav/$1
